[package]
name = "autopool"
description = "Self balancing async worker pool"
license = "MIT" 
readme = "README.md"
version = "0.1.0"
authors = ["Ryan Ragona <ryanragona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
